--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.13.1
   hooks_riverpod: ^2.3.6
   firebase_auth: ^4.6.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
